[web] Fix: MessageList spacing regression
Summary: Fix for https://linear.app/comm/issue/ENG-1474/messagelist-spacing-regression-on-chrome-on-web

Test Plan:
Tested CSS fix with prod data - it looks as it should now.
Send message with code block containing very long line. The page has now correct width on Chrome, Safari and Firefox.

Reviewers: tomek, atul, ashoat

Reviewed By: tomek, ashoat

Subscribers: adrian, abosh

Differential Revision: https://phab.comm.dev/D4665

--- a/web/chat/chat-message-list-container.css
+++ b/web/chat/chat-message-list-container.css
@@ -1,5 +1,6 @@
 div.container {
   flex: 1;
+  overflow: hidden;
   background-color: var(--bg);
   display: flex;
   flex-direction: column;
